syntax = "proto3";

option go_package = "v1";
option java_package = "io.stackrox.proto.api.v1";

import weak "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "api/v1/empty.proto";
import "storage/user.proto";

package v1;

message InitBundleMeta {
    string                    id          = 1;
    string                    name        = 2;
    google.protobuf.Timestamp created_at  = 3;
    storage.User              created_by  = 4;
    google.protobuf.Timestamp expires_at  = 5;
}

message InitBundleGenResponse {
    InitBundleMeta meta               = 1;
    bytes          helm_values_bundle = 2;
    bytes          kubectl_bundle     = 3;
}

message GetCAConfigResponse {
    bytes helm_values_bundle = 1;
}

message InitBundleMetasResponse {
    repeated InitBundleMeta items = 1;
}

message InitBundleGenRequest {
    string name = 1;
}

message InitBundleRevokeRequest {
    repeated string ids = 1;
}

service ClusterInitService {
    rpc RevokeInitBundle(InitBundleRevokeRequest) returns (Empty) {
        option (google.api.http) = {
            patch: "/v1/cluster-init/init-bundles/revoke",
            body: "*"
        };
    }

    rpc GetCAConfig(Empty) returns (GetCAConfigResponse) {
        option (google.api.http) = {
            get: "/v1/cluster-init/ca-config"
        };
    }

    rpc GetInitBundles(Empty) returns (InitBundleMetasResponse) {
        option (google.api.http) = {
            get: "/v1/cluster-init/init-bundles"
        };
    }

    rpc GenerateInitBundle(InitBundleGenRequest) returns (InitBundleGenResponse) {
        option (google.api.http) = {
            post: "/v1/cluster-init/init-bundles"
            body: "*"
        };
    }
}
